# SpotiFLAC-Module-Version

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  app.py  docker-entrypoint.sh  index.html  launcher.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-release.yml  docker-publish.yml  publish.yml
SpotiFLAC/: __init__.py  app.py  check_update.py  downloader.py  index.html  interactive.py  launcher.py
SpotiFLAC/core/: code_search.py  console.py  download_validation.py  endpoints.py  ffmpeg_check.py  flac_validation.py  health_check.py  history.py  http.py  isrc_cache.py  link_resolver.py  lyrics.py  metadata_enrichment.py  models.py  musicbrainz.py  profiles.py  progress.py  provider_stats.py  quality.py  session_memory.py  spotfetch.py  tagger.py
SpotiFLAC/frontend/: app.js  index.html  styles.css  toast-system.js
SpotiFLAC/providers/: __init__.py  amazon.py  apple_music.py  apple_music_metadata.py  base.py  deezer.py  gdstudio.py  joox.py  kuwo.py  migu.py  netease.py  pandora.py  qobuz.py  songstats.py  soundcloud.py  soundplate.py  spotidownloader.py  spotify_metadata.py  tidal.py  tidal_metadata.py  youtube.py
backend/: __init__.py  app.py  constants.py  downloader.py  interactive.py  launcher.py
backend/SpotiFLAC/: __init__.py
backend/SpotiFLAC/core/: http.py  isrc_finder.py
backend/SpotiFLAC/providers/: amazon.py  joox.py  netease.py  pandora.py  qobuz.py  soundcloud.py  youtube.py
backend/core/: __init__.py  code_search.py  console.py  download_validation.py  errors.py  health_check.py  isrc_cache.py  isrc_finder.py  link_resolver.py  metadata_enrichment.py  profiles.py  progress.py  provider_stats.py  tagger.py
backend/providers/: amazon.py  apple_music_metadata.py  base.py  pandora.py  qobuz.py  soundcloud.py  test_netease.py  tidal.py
frontend/: app.js  index.html  styles.css
tests/: conftest.py  test_cancellation.py  test_link_resolver.py  test_provider_stats.py  test_tidal_http.py  test_tidal_utils.py
