[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SpotiFLAC"
version = "0.8.7"
description = "Get Spotify tracks in true FLAC from Tidal, Qobuz & Amazon Music — no account required."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    { name="ShuKurenais, BartolomeoRusso9" }
]

keywords = [
    "spotify", "flac", "downloader", "music", "lossless", "lossless-music",
    "tidal", "qobuz", "amazon-music", "audio", "SpotiFLAC", "spotify-downloader",
    "no-account", "hi-res"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "httpx[http2]>=0.27.0",
    "mutagen>=1.47.0",
    "pydantic>=2.7.0",
    "cryptography>=42.0.0",
    "pycryptodome>=3.20.0",
    "packaging>=23.0",
    "yt-dlp>=2024.04.09",
    "tqdm>=4.66.0",
    "pywebview>=5.0.0",
    "aiofiles>=23.2.1",
    "tenacity>=8.3.0",
    "python-dotenv>=1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/ShuShuzinhuu/SpotiFLAC-Module-Version"
"Repository" = "https://github.com/ShuShuzinhuu/SpotiFLAC-Module-Version"
"Bug Tracker" = "https://github.com/ShuShuzinhuu/SpotiFLAC-Module-Version/issues"

[project.scripts]
spotiflac = "launcher:main"

[tool.setuptools]
py-modules = ["launcher", "app"]
packages = { find = { where = ["backend"], include = ["SpotiFLAC*"] } }
include-package-data = true

[tool.setuptools.data-files]
"frontend" = [
    "frontend/index.html",
    "frontend/app.js",
    "frontend/styles.css",
]

"frontend/assets/icons" = [
    "frontend/assets/icons/am.png",
    "frontend/assets/icons/amzn.png",
    "frontend/assets/icons/download.svg",
    "frontend/assets/icons/dzr.png",
    "frontend/assets/icons/logo.svg",
    "frontend/assets/icons/lrclib.png",
    "frontend/assets/icons/musicbrainz_d.png",
    "frontend/assets/icons/musicbrainz_l.png",
    "frontend/assets/icons/musixmatch.svg",
    "frontend/assets/icons/next.svg",
    "frontend/assets/icons/pandora.svg",
    "frontend/assets/icons/qbz.png",
    "frontend/assets/icons/songlink_d.png",
    "frontend/assets/icons/songlink_l.png",
    "frontend/assets/icons/songstats.png",
    "frontend/assets/icons/soundcloud.svg",
    "frontend/assets/icons/spotify.svg",
    "frontend/assets/icons/spotubedl.svg",
    "frontend/assets/icons/tidal_d.png",
    "frontend/assets/icons/tidal_l.png",
    "frontend/assets/icons/xbatchdl.svg",
    "frontend/assets/icons/youtube.svg",
]

[tool.setuptools.package-dir]
"" = "backend"

# Use setuptools.find to locate the `SpotiFLAC` package inside `backend/`.
# Previously `py-modules` was set which caused only top-level modules
# (`launcher`, `app`) to be included in the wheel; switching to `packages`
# ensures the package directory is packaged into the wheel.