[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SpotiFLAC"
version = "1.0.5"
description = "Get Spotify tracks in true FLAC from Tidal, Qobuz & Amazon Music — no account required."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name="ShuKurenais, BartolomeoRusso9" }
]

keywords = [
    "spotify", "flac", "downloader", "music", "lossless", "lossless-music",
    "tidal", "qobuz", "amazon-music", "audio", "SpotiFLAC", "spotify-downloader",
    "no-account", "hi-res"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "httpx[http2]>=0.27.0",
    "mutagen>=1.47.0",
    "pydantic>=2.7.0",
    "cryptography>=42.0.0",
    "pycryptodome>=3.20.0",
    "packaging>=23.0",
    "yt-dlp>=2024.04.09",
    "tqdm>=4.66.0",
    "pywebview>=5.0.0",
    "aiofiles>=23.2.1",
    "tenacity>=8.3.0",
    "python-dotenv>=1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/ShuShuzinhuu/SpotiFLAC-Module-Version"
"Repository" = "https://github.com/ShuShuzinhuu/SpotiFLAC-Module-Version"
"Bug Tracker" = "https://github.com/ShuShuzinhuu/SpotiFLAC-Module-Version/issues"

[project.scripts]
spotiflac = "SpotiFLAC.launcher:main"

[tool.setuptools]
packages = { find = { include = ["SpotiFLAC*"] } }
include-package-data = true

[tool.setuptools.data-files]
"frontend" = [
    "frontend/index.html",
    "frontend/app.js",
    "frontend/styles.css",
]

"frontend/assets/icons" = [
    "frontend/assets/icons/*",
]


# Use setuptools.find to locate the backend package inside `backend/`.
# Previously `py-modules` was set which caused only top-level modules
# (`launcher`, `app`) to be included in the wheel; switching to `packages`
# ensures the package directory is packaged into the wheel.